Fixed 2 popups at once

--- a/src/pages/Pm/PmComponents/PmComponents.module.css
+++ b/src/pages/Pm/PmComponents/PmComponents.module.css
@@ -524,6 +524,8 @@ tfoot:before {
   position: absolute;
   left: 31%;
   top: 6%;
+  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+  border-radius: 0.5vh;
 }
 
 .changeMasterPasswordHeader {
